--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "sass": "^1.54.5",
+    "typed.js": "^2.0.12",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-typed-js": "^0.1.2",
+    "vue3-particles": "^2.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
     "vite": "^3.0.7"
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
