--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/runtime": "^0.9.106",
     "sass": "^1.54.5",
     "typed.js": "^2.0.12",
     "vue": "^3.2.37",
