--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splinetool/runtime": "^0.9.106",
+    "parallax-js": "^3.1.0",
     "sass": "^1.54.5",
     "typed.js": "^2.0.12",
     "vue": "^3.2.37",
