--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@splinetool/runtime": "^0.9.106",
     "firebase": "^9.12.1",
     "parallax-js": "^3.1.0",
+    "pinia": "^2.0.23",
     "sass": "^1.54.5",
     "typed.js": "^2.0.12",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
     "vue-typed-js": "^0.1.2",
-    "vue3-particles": "^2.2.4"
+    "vue3-particles": "^2.2.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
